--- a/InventoryDataAssembly/App.Config
+++ b/InventoryDataAssembly/App.Config
@@ -8,7 +8,7 @@
     <!-- 
     <add name="InventoryEntities" connectionString="metadata=res://*/InventoryDataClasses.csdl|res://*/InventoryDataClasses.ssdl|res://*/InventoryDataClasses.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=C:\Users\Edgars\D_disk\Darps\LUMII\LU_Kursi\BusComp\2015\Studio_Proj\InventorySolutionDB\Inventory.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     -->
-    <add name="InventoryEntities" connectionString="metadata=res://*/InventoryDataClasses.csdl|res://*/InventoryDataClasses.ssdl|res://*/InventoryDataClasses.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\User\Desktop\InventorySolutionDB\Inventory.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="InventoryEntities" connectionString="metadata=res://*/InventoryDataClasses.csdl|res://*/InventoryDataClasses.ssdl|res://*/InventoryDataClasses.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\User\Desktop\Repos\dotNetInventorySolution\InventorySolutionDB\Inventory.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
