Add User Management

--- a/InventoryWCFAssembly/InventoryWCFAssembly.csproj
+++ b/InventoryWCFAssembly/InventoryWCFAssembly.csproj
@@ -22,6 +22,7 @@
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
     <UseGlobalApplicationHostFile />
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -92,6 +93,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <Content Include="Properties\DataSources\InventoryDataAssembly.Inventory.datasource" />
+    <Content Include="Properties\DataSources\InventoryDataAssembly.User.datasource" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -104,6 +107,9 @@
       <Project>{a551cb3a-8efc-4c47-b1b7-ff7fa05f8bca}</Project>
       <Name>InventoryDataAssembly</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
