--- a/InventoryWPFApplication/InventoryWPFApplication.csproj
+++ b/InventoryWPFApplication/InventoryWPFApplication.csproj
@@ -100,6 +100,9 @@
     <None Include="Service References\UserServiceReference\InventoryWPFApplication.UserServiceReference.Inventory.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
+    <None Include="Service References\UserServiceReference\InventoryWPFApplication.UserServiceReference.User.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Service References\UserServiceReference\UserService.wsdl" />
     <None Include="Service References\UserServiceReference\UserService.xsd">
       <SubType>Designer</SubType>
